builder spacing temp fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -131,7 +131,7 @@ body {
   /* height:auto; */
     overflow-y: scroll;
     position:absolute;
-    top:110px;
+    top:140px;
     bottom:0;
     left:1%;
     width:100%;
